# EM2D_sim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PERFORMANCE.md  README.md
EM2D_sim/: CMakeLists.txt  EM2D_sim.cpp  EM2D_sim.h
em2d_sfml/: CMakeLists.txt
em2d_sfml/assets/: config.json
src/: Config.cpp  Config.hpp  FDTD.cpp  FDTD.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  Source.cpp  Source.hpp  main.cpp
